--- a/src/pretix/locale/nl/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/djangojs.po
@@ -7,10 +7,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 09:53+0000\n"
-"PO-Revision-Date: 2018-04-06 12:47+0000\n"
-"Last-Translator: Pieter Roziers <pieter@trippeltwiejenul.be>\n"
-"Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix-js/"
-"nl/>\n"
+"PO-Revision-Date: 2018-05-02 13:40+0000\n"
+"Last-Translator: Maarten van den Berg <maartenberg1@gmail.com>\n"
+"Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix-"
+"js/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -297,18 +297,13 @@ msgstr ""
 "Klik op dit bericht om verder te gaan met uw winkelwagen."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
-#, fuzzy
-#| msgctxt "widget"
-#| msgid ""
-#| "ticketing powered by <a href=\"https://pretix.eu\" target=\"_blank\" rel="
-#| "\"noopener\">pretix</a>"
 msgctxt "widget"
 msgid ""
 "<a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\">event "
 "ticketing powered by pretix</a>"
 msgstr ""
-"ticketsysteem mogelijk gemaakt door <a href=\"https://pretix.eu\" target="
-"\"_blank\" rel=\"noopener\">pretix</a>"
+"<a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\">"
+"ticketsysteem mogelijk gemaakt door pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:28
 msgctxt "widget"
