Translated on translate.pretix.eu (Dutch)
Currently translated at 39.0% (934 of 2393 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/nl/

powered by weblate

--- a/src/pretix/locale/nl/LC_MESSAGES/django.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/django.po
@@ -3191,12 +3191,12 @@ msgstr ""
 
 #: pretix/base/services/orders.py:710
 msgid "You need to choose a subevent for the new position."
-msgstr ""
+msgstr "U moet een subevenement kiezen voor het nieuwe ticket."
 
 #: pretix/base/services/orders.py:1109
 #, python-format
 msgid "Your order has been changed: %(code)s"
-msgstr ""
+msgstr "Uw bestelling is aangepast: %(code)s"
 
 #: pretix/base/services/shredder.py:73
 msgid ""
